--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-
+    <button id="myButton" class="btn btn-primary mt-3">Click on me</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
